

==============================
Release 2.0.0.X
==============================
2014-04-05    If no timeout was set, the UI and WindowFinder search methods was return too fast even a result would be able to return
2014-04-05    The Do.Launch was has really launched the application
2014-04-04    Adjust documentation to not show any warning
2014-04-04    Add documentations
2014-04-03    Write usage of the interval in exceptions as well
2014-04-03    Add possibility to define an interval for searching for windows
2014-04-03    Add possibility to define an interval for waiting of the CPU idle
2014-04-03    Set the working directory of the proces called by the Do.Launch(*)
2014-04-03    Add possibility to define an interval for searching of UI elements
2014-04-02    ElementFinder: Add possibility to copy the automation id to the clipboard automatically
2014-04-02    Let the MouseEx and KeyboardEx return the CombinableDo to be able to append additional actions
2014-04-01    ElementFinder: Automatically select the first element in the tree
2014-04-01    ElementFinder: Add possibility to hide empty properties
2014-04-01    ElementFinder: Show item automation properties
2014-04-01    ElementFinder: Load and save current application settings on close and loading
2014-04-01    ElementFinder: Adjust style of the CopyableTextBox
2014-04-01    ElementFinder: Add possibility to copy values from a text box
2014-04-01    ElementFinder: Add toggle button for expand or collapse all after search
2014-04-01    ElementFinder: Add window for unhandled exceptions
2014-04-01    ElementFinder: Highlight the selected element in the elements tree
2014-04-01    ElementFinder: Add possibility to enable and disable the ElementFinder out of the large view
2014-04-01    ElementFinder: Show a symbol beside a found element if it has an automation id
2014-04-01    ElementFinder: Add tooltips to UI elements
2014-04-01    Add possibility to get children and parents from BasicElements