@@ -3,6 +3,7 @@
 ==============================
 Release 2.0.0.X
 ==============================
+2014-04-05    Remove methods to search for children in the BasicList and BasicCombobox themself, they was not working stable enough
 2014-04-05    If no timeout was set, the UI and WindowFinder search methods was return too fast even a result would be able to return
 2014-04-05    The Do.Launch was has really launched the application
 2014-04-04    Adjust documentation to not show any warning
